# renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  makefile
headers/: baseObject.h  camera.h  color.h  framebuffer.h  light.h  plane.h  ray.h  scene.h  sphere.h  triangle.h  vector3d.h  wavefront_loader.h
headers/bvh/: bvh.h  mesh.h
headers/core/: camera.h  color.h  light.h  sampler.h  scene.h
headers/geometry/: baseObject.h  face.h  ray.h  sphere.h  triangle.h  vector3d.h
headers/io/: framebuffer.h  parsing.h  wavefront_loader.h
headers/math/: face.h  randomnumbergenerator.h  ray.h  sphere.h  triangle.h  vector3d.h
src/: camera.cpp  color.cpp  light.cpp  ray.cpp  scene.cpp  sphere.cpp  triangle.cpp  vector3d.cpp  wavefront_loader.cpp
src/bvh/: bvh.cpp  mesh.cpp
src/core/: camera.cpp  color.cpp  light.cpp  sampler.cpp  scene.cpp
src/geometry/: ray.cpp  sphere.cpp  triangle.cpp  vector3d.cpp
src/io/: framebuffer.cpp  parsing.cpp  wavefront_loader.cpp
src/math/: randomnumbergenerator.cpp  ray.cpp  sphere.cpp  triangle.cpp  vector3d.cpp
